

Changes in 2.1.3 (changes since the 2.1.2 alpha release):

* Notable changes
* New deprecations
** `_IONBF', `_IOLBF', and `_IOFBF'

Instead, use the symbol values `none', `line', or `block', respectively,
as arguments to the `setvbuf' function.

* Incompatible changes
** Remove `scm_set_port_mark'

Port mark functions have not been called since the switch to the BDW
garbage collector.

** Remove `scm_set_port_free'

It used to be that if an open port became unreachable, a special "free"
function would be called instead of the "close" function.  Now that the
BDW-GC collector allows us to run arbitrary code in finalizers, we can
simplify to just call "close" on the port and remove the separate free
functions.  Note that hooking into the garbage collector has some
overhead.  For that reason Guile exposes a new interface,
`scm_set_port_needs_close_on_gc', allowing port implementations to
indicate to Guile whether they need closing on GC or not.


Changes in 2.1.2 (changes since the 2.1.1 alpha release):

* Notable changes

** Unboxed arithmetic

It used to be that Guile's numbers were always boxed with a tag
indicating their type.  Small integers could sometimes represent their
tag and value in one word; these are the fixnums.  Other kinds of
numbers would be allocated on the heap.

Guile can now unbox arithmetic on exact integers (values in the signed
and unsigned 64-bit integer range) and inexact reals (floating-point
numbers).  Access to bytevectors are always unboxed, and some arithmetic
can be unboxed as well.  Unboxing eliminates run-time allocation for
numbers and removes run-time polymorphic dispatch, providing a
significant speedup.

** Faster build times

Building Guile from a tarball can now take advantage of a "prebuilt/"
tree of prebuilt .go files.  These compiled files are created when a
tarball is made, and are used to speed up the build for users of
official releases.

These pre-built binaries are not necessary, however: they are not stored