@@ -187,7 +187,6 @@ typedef struct scm_t_ptob_descriptor
 {
   char *name;
   int (*print) (SCM exp, SCM port, scm_print_state *pstate);
-  SCM (*equalp) (SCM, SCM);
   int (*close) (SCM port);
 
   void (*write) (SCM port, const void *data, size_t size);
@@ -228,7 +227,6 @@ SCM_API void scm_set_port_print (scm_t_bits tc,
 				 int (*print) (SCM exp,
 					       SCM port,
 					       scm_print_state *pstate));
-SCM_API void scm_set_port_equalp (scm_t_bits tc, SCM (*equalp) (SCM, SCM));
 SCM_API void scm_set_port_close (scm_t_bits tc, int (*close) (SCM));
 SCM_API void scm_set_port_needs_close_on_gc (scm_t_bits tc, int needs_close_p);
 
